fix the line hover target being too wide

--- a/static/main.css
+++ b/static/main.css
@@ -113,7 +113,7 @@
 
 /* see yew_toolkit.rs */
 replaceonhoverhack {
-    display: block;
+    display: inline-block;
 }
 
 
